# docs/swagger.json
@@ -5,7 +5,7 @@
         "title": "Xynnar API",
         "contact": {
             "name": "Muazzam Ali Kazmi",
-            "url": "https://www.linkedin.com/in/muazzamalikazmi/",
+            "url": "https://github.com/0x5CE/xynnar",
             "email": "muazzam_ali@live.com"
         },
         "license": {
@@ -55,6 +55,12 @@
                         "schema": {
                             "$ref": "#/definitions/main.charactersGETResp"
                         }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/main.errorResp"
+                        }
                     }
                 }
             }
@@ -89,6 +95,12 @@
                         "schema": {
                             "$ref": "#/definitions/main.commentsGETResp"
                         }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/main.errorResp"
+                        }
                     }
                 }
             }
@@ -121,6 +133,12 @@
                         "schema": {
                             "$ref": "#/definitions/main.commentsGETResp"
                         }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/main.errorResp"
+                        }
                     }
                 }
             }
@@ -144,6 +162,12 @@
                         "schema": {
                             "$ref": "#/definitions/main.filmsGETResp"
                         }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/main.errorResp"
+                        }
                     }
                 }
             }
@@ -153,19 +177,19 @@
         "main.Character": {
             "type": "object",
             "properties": {
-                "birth_Year": {
+                "birth_year": {
                     "type": "string"
                 },
                 "gender": {
                     "type": "string"
                 },
-                "hair_Color": {
+                "hair_color": {
                     "type": "string"
                 },
                 "height": {
                     "type": "string"
                 },
-                "height_Ft": {
+                "height_ft": {
                     "type": "string"
                 },
                 "name": {
@@ -182,7 +206,7 @@
                 "ip": {
                     "type": "string"
                 },
-                "movie_Id": {
+                "movie_id": {
                     "type": "string"
                 },
                 "timestamp": {
@@ -193,19 +217,19 @@
         "main.Film": {
             "type": "object",
             "properties": {
-                "episode_Id": {
+                "episode_id": {
                     "type": "integer"
                 },
-                "opening_Crawl": {
+                "opening_crawl": {
                     "type": "string"
                 },
-                "release_Date": {
+                "release_date": {
                     "type": "string"
                 },
                 "title": {
                     "type": "string"
                 },
-                "total_Comments": {
+                "total_comments": {
                     "type": "integer"
                 }
             }
@@ -220,12 +244,13 @@
                     }
                 },
                 "count": {
-                    "type": "integer"
+                    "type": "integer",
+                    "example": 10
                 },
                 "totalHeight": {
                     "type": "string"
                 },
-                "totalHeight_Ft": {
+                "totalHeight_ft": {
                     "type": "string"
                 }
             }
@@ -239,7 +264,7 @@
                 },
                 "movie_id": {
                     "type": "integer",
-                    "example": 12
+                    "example": 5
                 }
             }
         },
@@ -254,7 +279,20 @@
                 },
                 "count": {
                     "type": "integer",
-                    "example": 12
+                    "example": 10
+                }
+            }
+        },
+        "main.errorResp": {
+            "type": "object",
+            "properties": {
+                "count": {
+                    "type": "integer",
+                    "example": 500
+                },
+                "message": {
+                    "type": "string",
+                    "example": "Error fetching film"
                 }
             }
         },
@@ -262,7 +300,8 @@
             "type": "object",
             "properties": {
                 "count": {
-                    "type": "integer"
+                    "type": "integer",
+                    "example": 10
                 },
                 "results": {
                     "type": "array",
